--- a/pom.xml
+++ b/pom.xml
@@ -26,9 +26,16 @@
 </dependency>
 <dependency>
     <groupId>javax.servlet</groupId>
+    <artifactId>javax.servlet-api</artifactId>
+    <version>3.1.0</version>
+    <scope>provided</scope>
+</dependency>
+<dependency>
+    <groupId>javax.servlet</groupId>
     <artifactId>jstl</artifactId>
     <version>1.2</version>
 </dependency>
+
   </dependencies>
   <properties>
   <maven.compiler.source>1.8</maven.compiler.source>
