--- a/pom.xml
+++ b/pom.xml
@@ -30,12 +30,17 @@
     <version>3.1.0</version>
     <scope>provided</scope>
 </dependency>
+
 <dependency>
     <groupId>javax.servlet</groupId>
     <artifactId>jstl</artifactId>
     <version>1.2</version>
 </dependency>
-
+<dependency>
+  <groupId>org.seleniumhq.selenium</groupId>
+  <artifactId>selenium-java</artifactId>
+  <version>2.25.0</version>
+</dependency>
   </dependencies>
   <properties>
   <maven.compiler.source>1.8</maven.compiler.source>
