--- a/src/main/resources/hikari.properties
+++ b/src/main/resources/hikari.properties
@@ -2,6 +2,5 @@ dataSourceClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
 dataSource.user=admincdb
 dataSource.password=qwerty1234
 dataSource.databaseName=computer-database-db?zeroDateTimeBehavior=convertToNull&autoReconnect=true&characterEncoding=UTF-8&characterSetResults=UTF-8
-#dataSource.databaseName=computer-database-db2?zeroDateTimeBehavior=convertToNull&autoReconnect=true&characterEncoding=UTF-8&characterSetResults=UTF-8
 dataSource.portNumber=3306
-dataSource.serverName=localhost
+dataSource.serverName=${dbip}
