--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 		<logback.version>1.1.7</logback.version>
 		<commons-lang3.version>3.4</commons-lang3.version>
 		<selenium-java.version>2.53.0</selenium-java.version>
+		<spring.version>4.3.0.RELEASE</spring.version>
 		<jstl.version>1.2</jstl.version>
 		<HikariCP.version>2.4.6</HikariCP.version>
 	</properties>
@@ -85,6 +86,11 @@
 			<version>${HikariCP.version}</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
 
 		<!-- LOGGING -->
 
@@ -118,12 +124,12 @@
 		</dependency>
 	</dependencies>
 	<build>
-	 <resources>
-            <resource>
-                <directory>${project.basedir}/src/main/resources</directory>
-                <filtering>true</filtering>
-            </resource>
-        </resources>
+		<resources>
+			<resource>
+				<directory>${project.basedir}/src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
 		<plugins>
 			<!-- Plugin to package as war -->
 			<plugin>
