--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 		<spring.version>4.3.0.RELEASE</spring.version>
 		<jstl.version>1.2</jstl.version>
 		<HikariCP.version>2.4.6</HikariCP.version>
+		<HibernateValidator.version>5.2.4.Final</HibernateValidator.version>
 	</properties>
 	<reporting>
 		<plugins>
@@ -113,6 +114,11 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>${HibernateValidator.version}</version>
 		</dependency>
 
 		<!-- LOGGING -->
