--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 		<jstl.version>1.2</jstl.version>
 		<HikariCP.version>2.4.6</HikariCP.version>
 		<HibernateValidator.version>5.2.4.Final</HibernateValidator.version>
+		<hibernate.version>5.1.0.Final</hibernate.version>
 	</properties>
 	<reporting>
 		<plugins>
@@ -88,6 +89,11 @@
 			<version>${HikariCP.version}</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-entitymanager</artifactId>
+			<version>${hibernate.version}</version>
+		</dependency>
 
 		<!-- SPRING -->
 		<dependency>
@@ -125,6 +131,11 @@
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
 			<version>${HibernateValidator.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-orm</artifactId>
+			<version>${spring.version}</version>
 		</dependency>
 
 		<!-- LOGGING -->
