--- a/persistence/pom.xml
+++ b/persistence/pom.xml
@@ -1,50 +1,43 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.excilys.formation</groupId>
 	<artifactId>cdb-persistence</artifactId>
 	<packaging>jar</packaging>
-	<version>0.6</version>
 	<name>cdb-persistence</name>
-<parent>
-  <artifactId>computer-database</artifactId>
-  <groupId>com.excilys.formation</groupId>
-  <relativePath>../pom.xml</relativePath>
-  <version>0.6</version>
-</parent>
+	<parent>
+		<artifactId>computer-database</artifactId>
+		<groupId>com.excilys.formation</groupId>
+		<relativePath>../pom.xml</relativePath>
+		<version>0.6</version>
+	</parent>
 	<dependencies>
-	  <dependency>
-                        <groupId>com.excilys.formation</groupId>
-                        <artifactId>cdb-core</artifactId>
-                        <version>0.6</version>
-          </dependency>
-	  <dependency>
-                        <groupId>com.excilys.formation</groupId>
-                        <artifactId>cdb-util</artifactId>
-                        <version>0.6</version>
-          </dependency>
+		<dependency>
+			<groupId>com.excilys.formation</groupId>
+			<artifactId>cdb-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.excilys.formation</groupId>
+			<artifactId>cdb-util</artifactId>
+		</dependency>
 		<!-- TEST -->
 
 		<!-- Junit dependency for unit and integration tests -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<!-- Selenium lib for integration tests -->
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
-			<version>${selenium-java.version}</version>
 			<scope>test</scope>
 		</dependency>
 
-		
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
-			<version>${spring.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>commons-logging</groupId>
@@ -55,32 +48,26 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
-			<version>${spring.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-tx</artifactId>
-			<version>${spring.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
-			<version>${spring.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
-			<version>${spring.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
-			<version>${HibernateValidator.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
-			<version>${spring.version}</version>
 		</dependency>
 
 		<!-- LOGGING -->
@@ -89,19 +76,16 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>jcl-over-slf4j</artifactId>
-			<version>1.7.21</version>
 		</dependency>
 		<!-- Logback implementation of the SLF4J api -->
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-core</artifactId>
-			<version>${logback.version}</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
-			<version>${logback.version}</version>
 			<scope>runtime</scope>
 		</dependency>
 
@@ -111,7 +95,23 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
-			<version>${commons-lang3.version}</version>
 		</dependency>
+		
+		<!-- The mysql-connector in order to use JDBC with MySQL -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <!-- HikariCP datapool -->
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+        </dependency>
 	</dependencies>
 </project>
