--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,14 @@
 	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
 	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
 	version="3.1">
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>
+		/WEB-INF/config/applicationContext.xml
+		/WEB-INF/config/security.xml
+		</param-value>
+	</context-param>
+
 	<error-page>
 		<!-- Forbidden directory listing -->
 		<error-code>403</error-code>
@@ -10,8 +18,8 @@
 	</error-page>
 	<error-page>
 		<!-- Missing resource -->
-		<error-code>404</error-code>
-		<location>/WEB-INF/404.jsp</location>
+		<error-code>403</error-code>
+		<location>/WEB-INF/403.jsp</location>
 	</error-page>
 	<error-page>
 		<!-- Uncaught exception -->
@@ -23,10 +31,7 @@
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>
-			WEB-INF/config/servlet-config.xml
-			classpath:/applicationContext.xml
-			</param-value>
+			<param-value>/WEB-INF/config/servlet-config.xml</param-value>
 		</init-param>
 	</servlet>
 	<servlet-mapping>
@@ -38,4 +43,15 @@
 		<param-name>javax.faces.INTERPRET_EMPTY_STRING_SUBMITTED_VALUES_AS_NULL</param-name>
 		<param-value>true</param-value>
 	</context-param>
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
 </web-app>
