--- a/console/pom.xml
+++ b/console/pom.xml
@@ -36,6 +36,11 @@
 			<artifactId>spring-context</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.glassfish.jersey.core</groupId>
+			<artifactId>jersey-server</artifactId>
+		</dependency>
+
 		<!-- LOGGING -->
 
 		<!-- SLf4J logging api bridge -->
