--- a/pom.xml
+++ b/pom.xml
@@ -203,6 +203,12 @@
 				<scope>runtime</scope>
 			</dependency>
 
+			<dependency>
+				<groupId>org.glassfish.jersey.core</groupId>
+				<artifactId>jersey-server</artifactId>
+				<version>2.23.1</version>
+			</dependency>
+
 			<!-- UTILS -->
 
 			<!-- Utils lib to perform checks on strings etc -->
