--- a/service/pom.xml
+++ b/service/pom.xml
@@ -40,6 +40,11 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-config</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-orm</artifactId>
+		</dependency>
+
 
 		<!-- LOGGING -->
 
