--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
 		<spring-security.version>4.1.0.RELEASE</spring-security.version>
 		<jcl.version>1.7.21</jcl.version>
 		<jersey.version>2.23.1</jersey.version>
+		<mockito.version>1.10.19</mockito.version>
 	</properties>
 
 	<dependencyManagement>
@@ -91,6 +92,14 @@
 				<artifactId>junit</artifactId>
 				<version>${junit.version}</version>
 				<scope>test</scope>
+			</dependency>
+
+			<!-- Mockito for mocking -->
+
+			<dependency>
+				<groupId>org.mockito</groupId>
+				<artifactId>mockito-all</artifactId>
+				<version>${mockito.version}</version>
 			</dependency>
 
 			<!-- Selenium lib for integration tests -->
